# outage-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
src/: constants.rs  helpers.rs  main.rs  response_structs.rs  state.rs
