[package]
name = "outage_monitor"
version = "0.1.0"
description = "An SCL outage monitor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
url = "2.4"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
geo = "0.28.0"
ansi_term = "0.12"
parking_lot = "0.12.3"
